re-added custom errors + added missing functionnality in /Account/Index.

--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -135,7 +135,7 @@
     <div class="info" id="creditStats">
         <div class="info_logo"></div>
         <div>
-            <h1 id="wonLoss"><green>850</green>/<red>400</red> GAGNÉS/PERDUS</h1>
+            <h1 id="wonLoss"><green>@Model.totalWon</green>/<red>@Model.totalLoss</red> GAGNÉS/PERDUS</h1>
         </div>
         @*<div>
                 <h1>0<grey> ACHETÉS</grey></h1>
@@ -174,7 +174,7 @@
             if (Model.favoriteTeam != null)
             {
                 <div>
-                    <h1>@Model.favoriteTeam<grey> ÉQUIPE FAVORITE</grey></h1>
+                    <h1>@Model.favoriteTeam.ToUpper()<grey> ÉQUIPE FAVORITE</grey></h1>
                 </div>
             }
         }
@@ -409,31 +409,6 @@
             h_align($("#optionSubmit > button"), $("#optionSubmit"), $("#optionSubmit > button").outerWidth());
             h_align($("#optionSubmit > div"), $("#optionSubmit"), $("#optionSubmit > div > h3").width() + $("#optionSubmit > div > img").width());
             h_align($(".optionHeader"), $("#optionForm"), $(".optionHeader").width());
-        }
-
-        function submitImg() {
-            loading_create();
-
-            $.ajax({
-                type: "POST",
-                url: "/Account/UpdateImage",
-                data: JSON.stringify(new { file: document.getElementById('ImageUploader').files[0] }),
-                success: function(){
-                    loading_remove(true, window.location.href);
-                },
-                error: function() {
-                    loading_remove(false, window.location.href);
-                },
-                dataType: "json",
-                contentType : "application/json"
-            });
-
-            //var file = document.getElementById('ImageUploader').files[0];
-            //var fd = new FormData();
-            //fd.append("file", file);
-            //var xhr = new XMLHttpRequest();
-            //xhr.open("POST", "/Account/UpdateImage", false);
-            //xhr.send(fd);
         }
 
         function submitEmail() {
