--- a/Gobot/Gobot/Content/GetCredits.css
+++ b/Gobot/Gobot/Content/GetCredits.css
@@ -16,3 +16,36 @@
   width: 100%;
   text-align: center; }
 
+#video {
+  position: relative;
+  float: left;
+  display: block;
+  width: 100%;
+  z-index: 700 !important; }
+
+#getCredit_container {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 895 !important; }
+  #getCredit_container #getCredit_btn {
+    position: relative;
+    display: block;
+    width: 40%; }
+    #getCredit_container #getCredit_btn > h1 {
+      position: relative;
+      display: block;
+      width: 90%;
+      padding: 45px 25px;
+      background-color: white;
+      color: #1f1f1f;
+      font: 900 42px Lato, Arial, sans-serif;
+      text-align: center;
+      text-transform: uppercase;
+      cursor: pointer;
+      margin: 0 !important; }
+    #getCredit_container #getCredit_btn > h1:hover {
+      background-color: #51c24b;
+      color: white; }
+
