--- a/Gobot/Gobot/Content/GetCredits.scss
+++ b/Gobot/Gobot/Content/GetCredits.scss
@@ -14,3 +14,43 @@
         text-align: center;
     }
 }
+
+#video {
+    position: relative;
+    float: left;
+    display: block;
+    width: 100%;
+    z-index: 700 !important;
+}
+
+#getCredit_container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.75);
+    z-index: 895 !important;
+
+    #getCredit_btn {
+        position: relative;
+        display: block;
+        width: 40%;
+
+        > h1 {
+            position: relative;
+            display: block;
+            width: 90%;
+            padding: 45px 25px;
+            background-color: white;
+            color: $darkerGrey;
+            font: 900 42px $font;
+            text-align: center;
+            text-transform: uppercase;
+            cursor: pointer;
+            margin: 0 !important;
+        }
+            > h1:hover {
+                background-color: $green;
+                color: white;
+            }
+    }
+}
