--- a/Gobot/Gobot/Views/Bet/ad.cshtml
+++ b/Gobot/Gobot/Views/Bet/ad.cshtml
@@ -20,7 +20,7 @@
         <div id="testdiv"></div>
         <video id="my-video" class="video-js" controls preload="auto" width="1280" height="720" poster="MY_VIDEO_POSTER.jpg" data-setup="{}">
             <!-- TODO Rajouter VideoPoster -->
-            <source src="" type='video/mp4'>
+            <source src="~/Videos/video_dark.mp4" type='video/mp4'>
             <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that<a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
             </p>
         </video>
