--- a/Gobot/Gobot/Content/Home.css
+++ b/Gobot/Gobot/Content/Home.css
@@ -667,7 +667,9 @@ body {
     position: relative;
     width: 50%;
     max-width: 155px;
-    height: auto; }
+    height: auto;
+    border-radius: 50% !important;
+    border: 10px solid rgba(255, 255, 255, 0.08) !important; }
   .side > h1, .side > h2, .side > h3, .side > .roles > span {
     display: block;
     position: relative;
@@ -703,18 +705,22 @@ body {
     text-indent: 10px;
     padding-top: 10%; }
     .team > div > span {
-      display: block;
+      display: inline-block;
       float: left;
       clear: both;
       font: italic 900 24px Lato, Arial, sans-serif;
       text-transform: uppercase;
-      width: 100%; }
+      width: 100%;
+      text-wrap: none;
+      word-wrap: normal;
+      overflow: hidden; }
   .team .names > span {
     color: white;
     text-align: right !important; }
   .team .roles > span {
     color: #4c4c4c;
-    text-align: left; }
+    text-align: left;
+    width: 300px; }
 
 #popOut_login {
   position: absolute;
