Corrected bugs + Added gun image to team bot's description.

--- a/Gobot/Gobot/Content/Account.css
+++ b/Gobot/Gobot/Content/Account.css
@@ -361,6 +361,7 @@ html, body {
     text-indent: 20px;
     margin-bottom: 15px; }
   #rep > h3 {
+    left: 30px;
     width: 100%;
     text-align: center;
     top: -10px !important; }
