--- a/Gobot/Gobot/Content/Account.scss
+++ b/Gobot/Gobot/Content/Account.scss
@@ -368,7 +368,7 @@ html, body { min-height: 100%; }
     margin: 0;
 
     > h2 { text-align: left; text-indent: 20px; margin-bottom: 15px; }
-    > h3 { width: 100%; text-align: center; top: -10px !important; }
+    > h3 { left: 30px; width: 100%; text-align: center; top: -10px !important; }
 }
     #rep-bar {
         position: relative;
