--- a/Gobot/Gobot/Content/Support.css
+++ b/Gobot/Gobot/Content/Support.css
@@ -13,7 +13,8 @@ h1 {
     font-size: 40px;
     color: #626262;
     padding: 10px 0;
-    margin: 30px 0; }
+    margin: 30px 0;
+    word-wrap: break-word; }
   h1 > a:hover {
     color: #ffbf5c; }
 
