--- a/Gobot/Gobot/Content/Teams.css
+++ b/Gobot/Gobot/Content/Teams.css
@@ -103,7 +103,8 @@
   float: left;
   width: auto;
   padding: 20px 40px 40px 40px;
-  max-width: 208.33333px; }
+  max-width: 208.33333px;
+  overflow: hidden; }
   .player > h1 {
     text-transform: uppercase;
     margin-bottom: 10px; }
@@ -120,4 +121,15 @@
 
 .kd {
   background-image: url("/Images/killDeath.png"); }
+
+.gun {
+  position: relative;
+  float: left;
+  display: block;
+  width: 43px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  margin-right: 3px; }
 
