--- a/Gobot/Gobot/Content/support.scss
+++ b/Gobot/Gobot/Content/support.scss
@@ -10,6 +10,7 @@ h1 {
         color: $grey;
         padding: 10px 0;
         margin: 30px 0;
+        word-wrap: break-word;
     }
     > a:hover { color: $orange; }
 }
