--- a/Gobot/Gobot/Views/Account/Index.cshtml
+++ b/Gobot/Gobot/Views/Account/Index.cshtml
@@ -298,19 +298,18 @@
 
                 $("#userOptions > h3, #openOption").hide();
                 $("#closeOption").show();
-
-                onResize();
             }
             else {
                 $("#options").remove();
                 $("#userOptions > h3, #openOption").show();
                 $("#closeOption").hide();
             }
+            onResize();
         });
 
-        $(document).on("focus", "form input", function () {
+        $(document).on("focus", "input", function () {
             $(this).prev().css("color", "#f16651");
-        }).on("blur", "form input", function () {
+        }).on("blur", "input", function () {
             $(this).prev().css("color", "#eee");
         });
 
@@ -357,6 +356,7 @@
                 else
                     $(this).css("width", "auto");
             });
+            v_align_window($(".info_container"));
         }
 
         function animateRanks(i) {
