--- a/Gobot/Gobot/Content/_global.scss
+++ b/Gobot/Gobot/Content/_global.scss
@@ -29,7 +29,7 @@ img                         { border: 0; }
 .green, green   { color: $green; }
 .red, red       { color: $red; }
 .white, white   { color: white; }
-.orange, orange { color: $orange; }
+.orange, orange { color: $orange !important; }
 .offw, offw     { color: $off-white; }
 .menuColor, 
 menuColor       { color: $orange !important; }
@@ -452,3 +452,31 @@ menuColor       { color: $orange !important; }
         > div { display: block; background: no-repeat center url(/Images/close_white.png); background-size: 40px; }
     }
 }
+
+#toTop, #toBottom {
+    float: left;
+    position: fixed;
+    display: block;
+    left: 0;
+    bottom: 0 !important;
+    margin: 0 0 15px 15px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    background-size: 15px !important;
+    background-color: $infoBgColor !important;
+}
+    #toTop { background: no-repeat center url(/Images/up_dark.png); left: 55px; }
+    #toBottom { background: no-repeat center url(/Images/down_dark.png); }
+
+    #toTop:hover, #toBottom:hover {
+        border: 1px solid $grey;
+        margin: 0 0 14px 14px;
+    }
+        #toTop:hover { background-image: url(/Images/up.png); }
+        #toBottom:hover { background-image: url(/Images/down.png); }
+
+    #toTop:active, #toBottom:active {
+        border: 1px solid $menuColor;
+        margin: 0 0 14px 14px;
+    }
