--- a/Gobot/Gobot/Views/Stats/History.cshtml
+++ b/Gobot/Gobot/Views/Stats/History.cshtml
@@ -8,6 +8,8 @@
 }
 @Styles.Render("~/Content/Bet.min.css")
 
+<div id="toBottom"></div>
+
 <div class="info smaller" id="getCredits">
     <a href="@Url.Action("History", "Stats")" class="active"><h2>Parties passées</h2></a>
     <div class="separator"><div></div></div>
